# geopy

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.markdown  README.md  README.rst  RELEASE.md  RELEASES  lint.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: Makefile  changelog_09x.rst  changelog_1xx.rst  changelog_2xx.rst  conf.py  google_v3_upgrade.md  index.rst
geopy/: =0.4.0  __init__.py  adapters.py  compat.py  coordinate.py  distance.py  exc.py  format.py  geocoders.py  geocoders_old.py  geohash.py  gigs_job_recommendation.py  location.py  point.py  timezone.py  units.py  util.py  version.py  version.txt
geopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
geopy/extra/: __init__.py  rate_limiter.py
geopy/geocoders/: __init__.py  algolia.py  amap.py  amazonlocationservices.py  arcgis.py  azure.py  baidu.py  banfrance.py  base.py  bing.py  databc.py  dot_us.py  geoapify.py  geoclient.py  geocodeapi.py  geocodeearth.py  geocodefam.py  geocodefarm.py  geocodio.py  geokeo.py  geolake.py  geonames.py  geonames_timezone.py  google.py  google_places.py  google_timezone.py  googleplaces.py  googlev3.py  here.py  herev7.py  ignfrance.py  ip2geo.py  mapbox.py  mapquest.py  maptiler.py  mapzen.py  mgrs.py  navidata.py  nominatim.py  opencage.py  (+21 more)
geopy/parsers/: __init__.py  base.py  gpx.py  html.py  iso8601.py  rdf.py
geopy/tests/: daemon.py  microformats.py  proxy_server.py  run_tests.py  test_backends.py  test_distance.py  test_format.py  test_gpx.py  test_microformats.py  test_proxy.py
test/: __init__.py  conftest.py  daemon.py  mock_data.py  proxy_server.py  run_tests.py  selfsigned_ca.pem  test_adapters.py  test_backends.py  test_distance.py  test_exc.py  test_format.py  test_gigs_job_recommendation.py  test_gpx.py  test_init.py  test_location.py  test_microformats.py  test_opencage.py  test_point.py  test_proxy.py  test_timezone.py
test/adapters/: each_adapter.py  retry_after.py
test/extra/: rate_limiter.py
test/geocoders/: __init__.py  algolia.py  arcgis.py  azure.py  baidu.py  banfrance.py  base.py  bing.py  databc.py  dotus.py  geoapify.py  geoclient.py  geocodeapi.py  geocodeearth.py  geocodefarm.py  geocodio.py  geokeo.py  geolake.py  geonames.py  googleplaces.py  googlev3.py  here.py  herev7.py  ignfrance.py  ip2geo.py  mapbox.py  mapquest.py  maptiler.py  mapzen.py  navidata.py  nominatim.py  nominatim_base.py  opencage.py  openmapquest.py  openrouteservice.py  pelias.py  photon.py  pickpoint.py  placefinder.py  smartystreets.py  (+9 more)
tests/: fells_loop.gpx  test_distance.py  test_geohash.py  test_gpx.py  test_microformats.py
