[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geopy"
authors = [
    {name = "Kostya Esmukov", email = "kostya@esmukov.net"},
]
description = "Python Geocoding Toolbox"
readme = "README.rst"
requires-python = ">=3.8.1"
keywords = ["geocode", "geocoding", "gis", "geographical", "maps", "earth", "distance"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "geographiclib>=1.52,<3",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://geopy.readthedocs.io"
"Source Code" = "https://github.com/geopy/geopy"
"Discussions" = "https://github.com/geopy/geopy/discussions"
"Issue Tracker" = "https://github.com/geopy/geopy/issues"

[project.optional-dependencies]
aiohttp = ["aiohttp"]
requests = [
    "urllib3>=1.24.2",
    # ^^^ earlier versions would work, but a custom ssl
    # context would silently have system certificates be loaded as
    # trusted: https://github.com/urllib3/urllib3/pull/1566
    "requests>=2.16.2",
    # ^^^ earlier versions would work, but they use an older
    # vendored version of urllib3 (see note above)
]
timezone = ["pytz"]

[dependency-groups]
dev = [
    "geopy[aiohttp,requests,timezone]",
    "tox>=4.22",
    {include-group="lint"},
    {include-group="test"},
    {include-group="docs"},
]
lint = [
    "flake8>=7.1.2,<7.4",
    "isort>=5.13.2,<8.1",
]
test = [
    "coverage",
    "pytest-asyncio>=0.17",
    "pytest>=3.10",
    "sphinx<=9.1.0",  # `docutils` from sphinx is used in tests
]
docs = [
    "readme_renderer",
    "sphinx<=9.1.0",
    "sphinx-issues",
    "sphinx_rtd_theme>=3.1.0",
]

[tool.isort]
profile = "black"
known_first_party = "test"
multi_line_output = 3

[tool.setuptools.dynamic]
version = {attr = "geopy.__version__"}

[tool.setuptools.packages.find]
include = ["geopy", "geopy.*"]
