[flake8]
max-complexity = 24
max-line-length = 90

[metadata]
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = Python Geocoding Toolbox
keywords = geocode, geocoding, gis, geographical, maps, earth, distance
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Kostya Esmukov
maintainer_email = kostya@esmukov.ru
name = geopy
url = https://github.com/geopy/geopy
download_url = https://pypi.org/project/geopy
project_urls =
    Documentation = https://geopy.readthedocs.io
    Source Code = https://github.com/geopy/geopy
    Discussions = https://github.com/geopy/geopy/discussions
    Issue Tracker = https://github.com/geopy/geopy/issues
version = attr: geopy.__version__

[options]
install_requires =
    geographiclib<3,>=1.52
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
    %(dev-lint)s
    %(dev-test)s
    %(dev-docs)s
dev-lint =
    flake8>=5.0,<5.1
    isort>=5.10.0,<5.11.0
dev-test =
    coverage
    pytest-asyncio>=0.17
    pytest>=3.10
    sphinx<=4.3.2  # `docutils` from sphinx is used in tests
dev-docs =
    readme_renderer
    sphinx<=4.3.2
    sphinx-issues
    sphinx_rtd_theme>=0.5.0
aiohttp = aiohttp
requests =
    urllib3>=1.24.2
    # ^^^ earlier versions would work, but a custom ssl
    # context would silently have system certificates be loaded as
    # trusted: https://github.com/urllib3/urllib3/pull/1566
    requests>=2.16.2
    # ^^^ earlier versions would work, but they use an older
    # vendored version of urllib3 (see note above)
timezone = pytz

[options.packages.find]
exclude =
    test*
