[flake8]
max-complexity = 24
max-line-length = 90

[isort]
known_first_party = test
multi_line_output = 3
profile = black

[metadata]
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = Python Geocoding Toolbox
keywords = geocode, geocoding, gis, geographical, maps, earth, distance
license = MIT
long_description = file: README.rst
maintainer = Kostya Esmukov
maintainer_email = kostya@esmukov.net
name = geopy
url = https://github.com/geopy/geopy
version = attr: geopy.__version__

[options]
install_requires =
    geographiclib<3,>=1.52
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    test*
