[flake8]
max-complexity = 24
max-line-length = 90

[metadata]
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3.15
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = Python Geocoding Toolbox
keywords = geocode, geocoding, gis, geographical, maps, earth, distance
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Kostya Esmukov
maintainer_email = kostya@esmukov.net
name = geopy
url = https://github.com/geopy/geopy
download_url = https://pypi.org/project/geopy
project_urls =
    Documentation = https://geopy.readthedocs.io
    Source Code = https://github.com/geopy/geopy
    Discussions = https://github.com/geopy/geopy/discussions
    Issue Tracker = https://github.com/geopy/geopy/issues
version = attr: geopy.__version__

[options]
install_requires =
    geographiclib<3,>=1.52
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    %(dev-lint)s
    %(dev-test)s
    %(dev-docs)s
dev-lint =
    flake8>=7.3.0
    isort>=7.0.0
dev-test =
    coverage
    pytest-asyncio>=0.17
    pytest>=3.10
    sphinx<=9.1.0  # `docutils` from sphinx is used in tests
dev-docs =
    readme_renderer
    sphinx<=9.1.0
    sphinx-issues
    sphinx_rtd_theme>=3.1.0
aiohttp = aiohttp
requests =
    urllib3>=1.24.2
    # ^^^ earlier versions would work, but a custom ssl
    # context would silently have system certificates be loaded as
    # trusted: https://github.com/urllib3/urllib3/pull/1566
    requests>=2.16.2
    # ^^^ earlier versions would work, but they use an older
    # vendored version of urllib3 (see note above)
timezone = pytz

[options.packages.find]
exclude =
    test*
